Cleaned up links that stay on the same page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 >
                     <div class="flex items-center justify-between">
                         <div class="md:font-medium">
-                            <a href="index.html">THERAPIEZENTRUM Berlin e. V.</a>
+                            <a href="#">THERAPIEZENTRUM Berlin e. V.</a>
                         </div>
 
                         <!--<div class="nav-content flex justify-between">-->
@@ -203,6 +203,7 @@
         </header>
 
         <!--<div class="bg-fixed bg-contain bg-top bg-no-repeat h-96" style="background-image: url('cover.jpg')"></div>-->
+        <!--cover photo placeholder from unsplash: tetiana-shyshkina-rt4vVJHmmu4-unsplash.jpg-->
         <div class="mb-10">
             <img class="h-75 w-full object-cover" src="cover.jpg" alt="xyz" />
         </div>
