--- a/therapie.html
+++ b/therapie.html
@@ -90,7 +90,7 @@
                             <a
                                 @mouseover="dropdownOpen = true"
                                 class="hidden md:block rounded hover:bg-green-200 md:hover:bg-green-500 px-2"
-                                href="therapie.html"
+                                href="#"
                                 >Therapie ▾</a
                             >
                             <a
