--- a/therapie.html
+++ b/therapie.html
@@ -86,16 +86,16 @@
                         class="mt-4 md:mt-0 -ml-2 md:ml-0 md:flex"
                     >
                         <!--<div x-data="{ dropdownOpen: false }">-->
-                        <div class="dropdown">
+                        <div class="dropdown group">
                             <a
                                 @mouseover="dropdownOpen = true"
-                                class="hidden md:block rounded hover:bg-green-200 md:hover:bg-green-500 px-2"
-                                href="#"
+                                class="hidden md:block hover:underline pl-4 pr-2"
+                                href="therapie.html"
                                 >Therapie ▾</a
                             >
                             <a
                                 @click="dropdownOpen = true"
-                                class="block md:hidden rounded hover:bg-green-200 md:hover:bg-green-500 px-2"
+                                class="block md:hidden hover:underline px-2"
                                 >Therapie ▾</a
                             >
                             <div
@@ -103,51 +103,51 @@
                                 @mouseover.away="dropdownOpen = false"
                                 @click.away="dropdownOpen = false"
                                 @click="dropdownOpen = false, menuOpen = false"
-                                class="md:absolute md:shadow-lg"
+                                class="md:absolute"
                             >
-                                <div class="ml-4 md:ml-0 md:bg-green-500 md:rounded px-2 pt-2 pb-2">
+                                <div class="ml-4 md:ml-0 md:bg-white px-2 pt-2 pb-2 md:group-hover:shadow-xl">
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
-                                        href="#"
+                                        class="block hover:underline px-2 mt-1"
+                                        href="therapie.html"
                                         >Übersicht</a
                                     >
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
+                                        class="block hover:underline px-2 mt-1"
                                         href="therapie.html#einzeltherapie"
                                         >Einzeltherapie</a
                                     >
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
+                                        class="block hover:underline px-2 mt-1"
                                         href="therapie.html#gruppentherapie"
                                         >Gruppentherapie</a
                                     >
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
+                                        class="block hover:underline px-2 mt-1"
                                         href="therapie.html#atemtherapie"
                                         >Atemtherapie</a
                                     >
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
+                                        class="block hover:underline px-2 mt-1"
                                         href="therapie.html#gestalttherapie"
                                         >Gestalt- und Körpertherapie</a
                                     >
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
+                                        class="block hover:underline px-2 mt-1"
                                         href="therapie.html#kindertherapie"
                                         >Kinder- und Jugendlichentherapie</a
                                     >
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
+                                        class="block hover:underline px-2 mt-1"
                                         href="therapie.html#paartherapie"
                                         >Paar- und Familientherapie</a
                                     >
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
+                                        class="block hover:underline px-2 mt-1"
                                         href="therapie.html#tiefenpsychologie"
                                         >Tiefenpsychologisch fundierte Psychotherapie</a
                                     >
                                     <a
-                                        class="block rounded hover:bg-green-200 px-2 mt-1"
+                                        class="block hover:underline px-2 mt-1"
                                         href="therapie.html#vt"
                                         >Verhaltenstherapie</a
                                     >
@@ -166,20 +166,20 @@
                             </div>
                         </div>
                         <a
-                            class="block rounded hover:bg-green-200 md:hover:bg-green-500 px-2 mt-2 md:mt-0 md:ml-4"
+                            class="block hover:underline px-2 mt-2 md:mt-0 md:ml-4"
                             >Beratung</a
                         >
                         <a
-                            class="block rounded hover:bg-green-200 md:hover:bg-green-500 px-2 mt-2 md:mt-0 md:ml-4"
+                            class="block hover:underline px-2 mt-2 md:mt-0 md:ml-4"
                             >Supervision</a
                         >
                         <a
-                            class="block rounded hover:bg-green-200 md:hover:bg-green-500 px-2 mt-2 md:mt-0 md:ml-4"
+                            class="block hover:underline px-2 mt-2 md:mt-0 md:ml-4"
                             href="team.html"
                             >Team</a
                         >
                         <a
-                            class="block rounded hover:bg-green-200 md:hover:bg-green-500 px-2 mt-2 md:mt-0 md:ml-4"
+                            class="block hover:underline px-2 mt-2 md:mt-0 md:ml-4"
                             href="./index.html#kontakt"
                             @click="menuOpen = false"
                             >Kontakt</a
@@ -188,6 +188,7 @@
                 </nav>
             </div>
         </header>
+
 
         <div class="container mx-auto mt-5 px-4 2xl:px-40">
             <main class="lg:px-40 min-h-screen">
@@ -208,20 +209,26 @@
                 </div>
                 <div id="einzeltherapie" class="pt-10">
                     <h1 class="text-3xl">Einzeltherapie</h1>
-                    <div class="mt-3">
-                        <p>
-                            Einzeltherapeutische Sitzungen (50 Min.) finden in der Regel ein- bis zweimal
-                            wöchentlich statt. Die Einzeltherapie bietet die Möglichkeit, die jeweilige
-                            Problematik individuell und intensiv anzugehen.
-                        </p>
-                        <p>
-                            Im Vordergrund steht dabei, im geschützten Raum der therapeutischen Beziehung eine
-                            Atmosphäre des Vertrauens herzustellen. Auf dieser Grundlage können konflikthafte
-                            Bereiche der Persönlichkeit besprochen, neu erlebt und alternative
-                            Handlungsmöglichkeiten entwickelt werden. Es kann im Verlauf der Behandlung
-                            sinnvoll werden, die Einzelarbeit durch Teilnahme an einer therapeutischen Gruppe
-                            zu ergänzen.
-                        </p>
+                    <div class="mt-3 md:grid md:grid-cols-4 md:gap-x-4">
+                        <div class="md:col-span-3">
+                            <p>
+                                Einzeltherapeutische Sitzungen (50 Min.) finden in der Regel ein- bis zweimal
+                                wöchentlich statt. Die Einzeltherapie bietet die Möglichkeit, die jeweilige
+                                Problematik individuell und intensiv anzugehen.
+                            </p>
+                            <p>
+                                Im Vordergrund steht dabei, im geschützten Raum der therapeutischen Beziehung eine
+                                Atmosphäre des Vertrauens herzustellen. Auf dieser Grundlage können konflikthafte
+                                Bereiche der Persönlichkeit besprochen, neu erlebt und alternative
+                                Handlungsmöglichkeiten entwickelt werden. Es kann im Verlauf der Behandlung
+                                sinnvoll werden, die Einzelarbeit durch Teilnahme an einer therapeutischen Gruppe
+                                zu ergänzen.
+                            </p>
+                        </div>
+                        <div class="rounded-lg border-2 p-4 mt-4 md:mt-0">
+                            <p>Kassenleistung</p>
+                            <p class="mt-2">John Coßmann</p>
+                        </div>
                     </div>
                 </div>
                 <div id="gruppentherapie" class="pt-10">
