--- a/rot.html
+++ b/rot.html
@@ -42,13 +42,13 @@
 
         <header class="sticky top-0 md:bg-white md:pb-1 shadow-md">
             <div class="hidden md:block">
-                <div class="w-full h-2 m-0 p-0 bg-green-300"></div>
-                <div class="w-2 h-10 m-0 p-0 bg-green-300"></div>
+                <div class="w-full h-2 m-0 p-0 bg-red-500"></div>
+                <div class="w-2 h-10 m-0 p-0 bg-red-500"></div>
             </div>
 
             <!--<div class="container bg-white mx-auto px-4 mt-10 mb-10">-->
             <div
-                class="md:container bg-green-300 md:bg-white mx-auto px-4 py-3 md:py-0 2xl:px-40 md:-mt-3 md:mb-4"
+                class="md:container bg-red-500 md:bg-white mx-auto px-4 py-3 md:py-0 2xl:px-40 md:-mt-3 md:mb-4"
             >
                 <nav
                     x-data="{ menuOpen: false, dropdownOpen: false }"
@@ -350,7 +350,6 @@
                         ></a>
                     </div>
                 </div>
-                <!-- <div class="w-full h-2 transform skew-y-3 bg-green-300 mb-12"></div> -->
                 <div id="kontakt" class="">
                     <h1 class="text-3xl">Kontakt</h1>
                     <div class="md:flex md:justify-between md:space-x-5 mt-3">
@@ -400,8 +399,8 @@
         </div>
 
         <footer>
-            <div class="w-2 h-20 m-0 ml-auto p-0 bg-green-300"></div>
-            <div class="w-full h-2 m-0 p-0 bg-green-300"></div>
+            <div class="w-2 h-20 m-0 ml-auto p-0 bg-red-500"></div>
+            <div class="w-full h-2 m-0 p-0 bg-red-500"></div>
         </footer>
 
         <script src="" async defer></script>
