--- a/src/new-menu.html
+++ b/src/new-menu.html
@@ -210,7 +210,7 @@
                                         md:border-2 md:rounded
                                     "
                                 >
-                                    <a class="block hover:underline px-2 mt-1" href="therapie.html"
+                                    <a class="block hover:underline px-2 mt-1" href="team.html"
                                         >Unser Team</a
                                     >
                                     <a
