Changed yellow and orange colors

--- a/src/orange.html
+++ b/src/orange.html
@@ -11,7 +11,7 @@
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />-->
-        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+        <link href="tailwindout.css" rel="stylesheet" />
         <!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />-->
         <!--<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">-->
@@ -42,13 +42,13 @@
 
         <header class="sticky top-0 md:bg-white md:pb-1 shadow-md">
             <div class="hidden md:block">
-                <div class="w-full h-2 m-0 p-0 bg-yellow-500"></div>
-                <div class="w-2 h-10 m-0 p-0 bg-yellow-500"></div>
+                <div class="w-full h-2 m-0 p-0 bg-my-orange"></div>
+                <div class="w-2 h-10 m-0 p-0 bg-my-orange"></div>
             </div>
 
             <!--<div class="container bg-white mx-auto px-4 mt-10 mb-10">-->
             <div
-                class="md:container bg-yellow-500 md:bg-white mx-auto px-4 py-3 md:py-0 2xl:px-40 md:-mt-3 md:mb-4"
+                class="md:container bg-my-orange md:bg-white mx-auto px-4 py-3 md:py-0 2xl:px-40 md:-mt-3 md:mb-4"
             >
                 <nav
                     x-data="{ menuOpen: false, dropdownOpen: false }"
@@ -399,8 +399,8 @@
         </div>
 
         <footer>
-            <div class="w-2 h-20 m-0 ml-auto p-0 bg-yellow-500"></div>
-            <div class="w-full h-2 m-0 p-0 bg-yellow-500"></div>
+            <div class="w-2 h-20 m-0 ml-auto p-0 bg-my-orange"></div>
+            <div class="w-full h-2 m-0 p-0 bg-my-orange"></div>
         </footer>
 
         <script src="" async defer></script>
