--- a/src/therapie.html
+++ b/src/therapie.html
@@ -96,7 +96,7 @@
             <div
               class="group"
               @mouseover="angeboteDropdownOpen = true"
-              @mouseover.away="angeboteDropdownOpen = false"
+              @mouseover.outside="angeboteDropdownOpen = false"
             >
               <a
                 class="
@@ -115,7 +115,7 @@
               >
               <div
                 x-show="angeboteDropdownOpen"
-                @click.away="angeboteDropdownOpen = false"
+                @click.outside="angeboteDropdownOpen = false"
                 @click="angeboteDropdownOpen = false, menuOpen = false"
                 class="dropdown md:absolute"
               >
@@ -144,7 +144,7 @@
             <div
               class="group"
               @mouseover="aboutDropdownOpen = true"
-              @mouseover.away="aboutDropdownOpen = false"
+              @mouseover.outside="aboutDropdownOpen = false"
             >
               <a
                 class="hidden md:block md:animated-underline ml-3 mr-1 px-2"
@@ -158,7 +158,7 @@
               >
               <div
                 x-show="aboutDropdownOpen"
-                @click.away="aboutDropdownOpen = false"
+                @click.outside="aboutDropdownOpen = false"
                 @click="aboutDropdownOpen = false, menuOpen = false"
                 class="dropdown md:absolute"
               >
