--- a/src/team.html
+++ b/src/team.html
@@ -32,17 +32,7 @@
       </div>
 
       <div
-        class="
-          md:container
-          bg-primary
-          md:bg-white
-          mx-auto
-          px-4
-          py-3
-          md:py-0
-          2xl:px-40
-          md:-mt-3 md:mb-4
-        "
+        class="md:container bg-primary md:bg-white mx-auto px-4 py-3 md:py-0 2xl:px-40 md:-mt-3 md:mb-4"
       >
         <!-- TOP NAVIGATION -->
         <nav
@@ -99,12 +89,7 @@
               @mouseover.outside="angeboteDropdownOpen = false"
             >
               <a
-                class="
-                  hidden
-                  md:block md:animated-underline md:before:origin-top-left
-                  ml-2
-                  px-2
-                "
+                class="hidden md:block md:animated-underline md:before:origin-top-left ml-2 px-2"
                 href=""
                 >Angebote ▾</a
               >
@@ -120,15 +105,7 @@
                 class="dropdown md:absolute"
               >
                 <div
-                  class="
-                    ml-4
-                    md:ml-0 md:bg-white
-                    px-2
-                    pt-2
-                    md:pt-1 md:mt-2
-                    pb-2
-                    md:border-2 md:rounded md:shadow-md
-                  "
+                  class="ml-4 md:ml-0 md:bg-white px-2 pt-2 md:pt-1 md:mt-2 pb-2 md:border-2 md:rounded md:shadow-md"
                 >
                   <a class="block px-2 mt-1" href="therapie.html">Therapie</a>
                   <a class="block px-2 mt-1" href="">Beratung</a>
@@ -163,15 +140,7 @@
                 class="dropdown md:absolute"
               >
                 <div
-                  class="
-                    ml-4
-                    md:ml-0 md:bg-white
-                    px-2
-                    pt-2
-                    md:pt-1 md:mt-2
-                    pb-2
-                    md:border-2 md:rounded md:shadow-md
-                  "
+                  class="ml-4 md:ml-0 md:bg-white px-2 pt-2 md:pt-1 md:mt-2 pb-2 md:border-2 md:rounded md:shadow-md"
                 >
                   <a class="block px-2 mt-1" href="team.html">Unser Team</a>
                   <a class="block px-2 mt-1" href=""
@@ -182,13 +151,7 @@
             </div>
 
             <a
-              class="
-                md:before:origin-top-right md:animated-underline
-                block
-                px-2
-                mt-2
-                md:mt-0 md:ml-4
-              "
+              class="md:before:origin-top-right md:animated-underline block px-2 mt-2 md:mt-0 md:ml-4"
               href="./index.html#kontakt"
               @click="menuOpen = false"
               >Kontakt</a
@@ -423,9 +386,21 @@
                   ></a>
                 </div>
                 <div class="team-member-title">
-                  Diplom-Psychologin, Psychologische Psychotherapeutin
+                  Diplom-Psychologin, Psychologische Psychotherapeutin,
+                  Supervisorin (BdP), Lehrtherapeutin (Isi)
                 </div>
-                <div class="team-member-txt"></div>
+                <div class="team-member-txt">
+                  <p>Ausbildungen:</p>
+                  <ul class="list-disc list-inside">
+                    <li>Tiefenpsychologisch fundierte Psychotherapie / TP</li>
+                    <li>Paar- und Familientherapie / PPT</li>
+                    <li>Organisationsberatung / Klett</li>
+                  </ul>
+                  <p>
+                    Im Therapiezentrum Berlin e.V. seit 1989 als
+                    Psychotherapeutin, Supervisorin und Coach tätig
+                  </p>
+                </div>
                 <div class="team-member-angebot">
                   <a href="">Tiefenpsychologisch fundierte Psychotherapie</a>,
                   <a href="">Paarberatung und -therapie</a>,
@@ -601,8 +576,23 @@
                       /></svg
                   ></a>
                 </div>
-                <div class="team-member-title"></div>
-                <div class="team-member-txt"></div>
+                <div class="team-member-title">
+                  Diplom-Psychologin, Psychologische Psychotherapeutin
+                </div>
+                <div class="team-member-txt">
+                  <p>
+                    Ausbildung in Psychoanalyse und
+                    tiefenpsychologisch-fundierter Psychotherapie
+                  </p>
+                  <p>
+                    Studium der Psychologie, Soziologie, Erziehungs- und
+                    Politikwissenschaften
+                  </p>
+                  <p>
+                    Seit 2021 im Therapiezentrum Berlin e.V. als
+                    Psychotherapeutin tätig
+                  </p>
+                </div>
                 <div class="team-member-angebot">
                   <a href="">Analytische Psychotherapie</a>,
                   <a href="">Tiefenpsychologisch fundierte Psychotherapie</a>.
