--- a/src/therapie.html
+++ b/src/therapie.html
@@ -32,17 +32,7 @@
       </div>
 
       <div
-        class="
-          md:container
-          bg-primary
-          md:bg-white
-          mx-auto
-          px-4
-          py-3
-          md:py-0
-          2xl:px-40
-          md:-mt-3 md:mb-4
-        "
+        class="md:container bg-primary md:bg-white mx-auto px-4 py-3 md:py-0 2xl:px-40 md:-mt-3 md:mb-4"
       >
         <!-- TOP NAVIGATION -->
         <nav
@@ -99,12 +89,7 @@
               @mouseover.outside="angeboteDropdownOpen = false"
             >
               <a
-                class="
-                  hidden
-                  md:block md:animated-underline md:before:origin-top-left
-                  ml-2
-                  px-2
-                "
+                class="hidden md:block md:animated-underline md:before:origin-top-left ml-2 px-2"
                 href=""
                 >Angebote ▾</a
               >
@@ -120,15 +105,7 @@
                 class="dropdown md:absolute"
               >
                 <div
-                  class="
-                    ml-4
-                    md:ml-0 md:bg-white
-                    px-2
-                    pt-2
-                    md:pt-1 md:mt-2
-                    pb-2
-                    md:border-2 md:rounded md:shadow-md
-                  "
+                  class="ml-4 md:ml-0 md:bg-white px-2 pt-2 md:pt-1 md:mt-2 pb-2 md:border-2 md:rounded md:shadow-md"
                 >
                   <a class="block px-2 mt-1" href="therapie.html">Therapie</a>
                   <a class="block px-2 mt-1" href="">Beratung</a>
@@ -163,15 +140,7 @@
                 class="dropdown md:absolute"
               >
                 <div
-                  class="
-                    ml-4
-                    md:ml-0 md:bg-white
-                    px-2
-                    pt-2
-                    md:pt-1 md:mt-2
-                    pb-2
-                    md:border-2 md:rounded md:shadow-md
-                  "
+                  class="ml-4 md:ml-0 md:bg-white px-2 pt-2 md:pt-1 md:mt-2 pb-2 md:border-2 md:rounded md:shadow-md"
                 >
                   <a class="block px-2 mt-1" href="team.html">Unser Team</a>
                   <a class="block px-2 mt-1" href=""
@@ -182,13 +151,7 @@
             </div>
 
             <a
-              class="
-                md:before:origin-top-right md:animated-underline
-                block
-                px-2
-                mt-2
-                md:mt-0 md:ml-4
-              "
+              class="md:before:origin-top-right md:animated-underline block px-2 mt-2 md:mt-0 md:ml-4"
               href="./index.html#kontakt"
               @click="menuOpen = false"
               >Kontakt</a
@@ -393,67 +356,21 @@
           <h2>Sexualtherapie</h2>
           <div>
             <p>
-              Eine Sexualtherapie empfiehlt sich bei Schwierigkeiten des
-              sexuellen Erlebens oder bei einer Störung des Sexualverhaltens.
+              Die Sexualtherapie empfiehlt sich bei Schwierigkeiten des
+              sexuellen Erlebens, bei sich unterschiedlich entwickelten
+              sexuellen Wünschen und Bedürfnissen, bei grundsätzlichen
+              Konflikten, die der sexuellen Erfüllung im Wege stehen oder bei
+              einer Störung des Sexualverhaltens.
             </p>
-            <ul class="list-inside list-disc">
-              <li>
-                Häufig kommt im Verlauf einer Partnerschaft die Frage nach einer
-                Sexualtherapie auf, da sich mit der Zeit die Wünsche und
-                Bedürfnisse nach Sexualität unterschiedlich entwickelt haben.
-                Das betrifft bspw. das Ausleben oder die Häufigkeit der
-                Sexualität. Es entsteht eine große Unzufriedenheit. Bei einigen
-                Menschen lässt die Lust nach Sex stark nach. Erektionsprobleme
-                vor oder während des Geschlechtsaktes können beim Mann ein
-                Anstoß sein, Scheidentrockenheit bei Frauen um eine solche
-                Therapie in Betracht zu ziehen.
-              </li>
-              <li>
-                Eine Sexualtherapie ist aber auch sinnvoll, wenn eine
-                traumatische Erfahrung überwunden werden soll, wie z. B. das
-                Erleben sexueller Gewalt in der Vergangenheit.
-              </li>
-            </ul>
-
-            <p class="mt-3">Was passiert bei einer Sexualtherapie?</p>
-
             <p>
-              Die Sexualtherapie wird gemeinsam mit einem Sexualtherapeuten oder
-              einer Sexualtherapeutin durchgeführt. Zentral ist dabei das
-              Sprechen über die sexuellen Schwierigkeiten.
+              Sie ist ebenso sinnvoll bei der Bearbeitung einer traumatischen
+              Erfahrung wie sexueller Gewalt in der Vergangenheit. Hierbei
+              empfiehlt sich eine begleitende Traumatherapie. Im Rahmen einer
+              Paartherapie steht nicht nur das Kennenlernen des eigenen Körpers
+              im Vordergrund, sondern auch das Wahrnehmen des Körpers des
+              Partners bzw. der Partnerin. Paare lernen sich über sexuelle
+              Wünsche auszutauschen und das körperliche Erleben zu beschreiben.
             </p>
-
-            <ul class="list-inside list-disc">
-              <li>
-                Zuerst wird eine Diagnose gestellt. Hier wird die
-                Lebensgeschichte, aktuelle Beziehungen und das Sexualleben
-                erfragt.
-              </li>
-
-              <li>
-                Sind die Ursachen in einer traumatischen Erfahrung zu suchen,
-                empfiehlt sich eine begleitende Traumatherapie.
-              </li>
-
-              <li>
-                Bei Orgasmusstörungen oder vorzeitigem Samenerguss werden
-                verschiedene Methoden zur Selbsterforschung, Selbstfindung und
-                Selbstbefriedigung angewendet.
-              </li>
-
-              <li>
-                Im Rahmen einer Paartherapie steht nicht nur das Kennenlernen
-                des eignen Körpers im Vordergrund, sondern auch das Wahrnehmen
-                des Partners bzw. der Partnerin. Hier wird gelernt, sich über
-                sexuelle Wünsche auszutauschen.
-              </li>
-
-              <li>
-                Sollten grundsätzliche Konflikte der sexuellen Erfüllung im Wege
-                stehen, werden diese Schwierigkeiten ebenfalls in der
-                Sexualtherapie behandelt.
-              </li>
-            </ul>
           </div>
         </div>
         <div id="tiefenpsychologie" class="pt-10">
